# xssh-tunnel

./: .gitignore  AGENTS.md  README.md  XSSH Tunnel.md  components.json  package-lock.json  package.json  skills-lock.json  svelte.config.js  tailwind.config.js  vite.config.ts
config/: xyz.dvnlabs.xsshtunnel.plist
docs/: M1_TESTING.md
docs/superpowers/plans/: 2026-05-20-m0-skeleton.md  2026-05-20-m1-core-tunnel.md  2026-05-20-m2-ssh-connection-manager.md  2026-05-20-m3-logs-edit-import.md  2026-05-20-m5-privileged-helper.md  2026-05-21-m6-stats-health.md
docs/superpowers/specs/: 2026-05-20-m1-core-tunnel-design.md  2026-05-20-m2-ssh-connection-manager-design.md  2026-05-20-m3-logs-edit-import-design.md  2026-05-20-m5-privileged-helper-design.md  2026-05-21-m6-stats-health-design.md
helper/: Cargo.toml
helper/src/: main.rs
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/crypto/: keychain.rs  mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_initial.sql
src-tauri/src/helper/: client.rs  mod.rs
src-tauri/src/logs/: mod.rs
src-tauri/src/profiles/: mod.rs
src-tauri/src/ssh/: client.rs  config_parser.rs  mod.rs
src-tauri/src/tunnel/: mod.rs  packet_router.rs  proxies.rs  proxy.rs  route_manager.rs  socks5.rs  tun_device.rs
src/lib/: tauri.ts  utils.ts
src/lib/components/: confirm-dialog.svelte  connection-form-dialog.svelte  connection-stats.svelte  import-dialog.svelte  log-panel.svelte  profile-card.svelte
src/lib/components/ui/alert-dialog/: alert-dialog-content.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/command/: command-group.svelte  command-input.svelte  command-separator.svelte
src/lib/components/ui/context-menu/: context-menu-checkbox-item.svelte  context-menu-content.svelte  context-menu-item.svelte  context-menu-radio-item.svelte  context-menu-separator.svelte  context-menu-sub-content.svelte  context-menu-sub-trigger.svelte
src/lib/components/ui/drawer/: drawer-content.svelte
src/lib/components/ui/dropdown-menu/: dropdown-menu-content.svelte  dropdown-menu-sub-content.svelte
src/lib/components/ui/empty/: empty.svelte
src/lib/stores/: connection.ts  helper.ts  logs.ts  profiles.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/connections/new/: +page.svelte
src/routes/logs/: +page.svelte
src/routes/settings/: +page.svelte
(+20 files in other folders)
