[package]
name = "xssh-tunnel"
version = "0.1.0"
description = "XSSH Tunnel — Zero-config SSH VPN"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
russh = "0.60.3"
russh-keys = "0.49.2"
tun = { version = "0.8.9", features = ["async"] }
tracing = "0.1"
thiserror = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
