[package]
name = "xssh-tunnel"
version = "0.1.0"
description = "XSSH Tunnel — Zero-config SSH VPN"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
russh = "0.60.3"
russh-keys = "0.49.2"
tun = { version = "0.8.9", features = ["async"] }
tracing = "0.1"
thiserror = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "uuid"] }
ring = "0.17"
security-framework = "3"
core-foundation = "0.10"
libc = "0.2"
shellexpand = "3.1.0"
objc2 = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
